0.2.5:    Sat Oct 14 13:27:21 IST 2006

    * Specified the license.
    * Added pod.t and pod-coverage.t
        - prefixed the inner functions with underscores
    * Added a Buile.PL file.
    * Added the examples directory

0.2.4:

Added the Changes file to the MANIFEST.

0.2.3:

Fixed a documentation bug that said HTML::Hard::Disk instead of 
HTML::Links::Localize.